started fixing get_plant_infoTest